--- a/tsm.env
+++ b/tsm.env
@@ -1,5 +1,4 @@
 DB password - uTfXYXKjnYBVPO0x
 DB ID- TSM123
 
-
-connection_string- mongodb+srv://<username>:<password>@cluster0.kzcr0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE=mongodb+srv://<username>:<password>@cluster0.kzcr0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
